Closed Bug 1644292 Opened 4 years ago Closed 4 years ago

TaskController doesn't currently support runnable telemetry

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox79 --- fixed

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

If we want to enable it by default. It should.

Assignee: nobody → bas
Status: NEW → ASSIGNED
Pushed by bschouten@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0aa5f131c440 Duplicate code for runnable telemetry for runnables executed inside TaskController. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: