Bug 1644292: Duplicate code for runnable telemetry for runnables executed inside TaskController. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D78888